# raw2header

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  Makefile  README.md  adpcm.c  adpcm.h  cmake_install.cmake  compile_commands.json  install_manifest.txt  raw2header  raw2header.c  raw2header.h  raw2header_cli.c  raw2header_cli.h  raw2header_io.c  raw2header_io.h  test_adpcm  test_adpcm.c  test_source_pair.c
.cache/clangd/index/: adpcm.h.5ACD27A778DCCA09.idx  raw2header.c.900F43F299A768A1.idx
